# escrow-system

./: .env.example  .gitignore  Anchor.toml  Anchor.toml.bak  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  package-lock.json  package.json  tsconfig.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  quick-test.yml  test-and-deploy.yml
client/: escrow-client.ts  example-usage.ts  simple-example.ts  working-example.js  working-example.ts
deployments/: .gitkeep
docs/: api.md  deployment.md  security.md
frontend/: escrow-ui.tsx
monitoring/: program-monitor.js  program-monitor.ts
programs/escrow-system/: Cargo.toml
programs/escrow-system/src/: lib.rs  lib.rs.bak
scripts/: check-requirements.sh  create-keypair.sh  deploy-env.sh  deploy.sh  health-check.sh  manage-program-id.sh  quick-start.sh  setup.sh
tests/: escrow-system.ts
